<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_experiment">

    <fragment
        android:id="@+id/navigation_experiment"
        android:name="com.jit.chemistry.ui.fragment.ExperimentFragment"
        android:label="@string/title_experiment"
        tools:layout="@layout/fragment_experiment" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.jit.chemistry.ui.fragment.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />

    <fragment
        android:id="@+id/navigation_lesson"
        android:name="com.jit.chemistry.ui.fragment.LessonFragment"
        android:label="@string/title_lesson"
        tools:layout="@layout/fragment_lesson" />
</navigation>