<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.fragment.MineFragment">

    <ImageView
        android:id="@+id/ivMore"
        android:layout_width="@dimen/actionBarSize"
        android:layout_height="@dimen/actionBarSize"
        android:layout_gravity="end"
        android:padding="14dp"
        android:src="@drawable/ic_more_black_19dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatar"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/au_avter"
        app:civ_border_color="#cdcdcd"
        app:civ_border_width="1dp"
        app:civ_circle_background_color="@color/gray" />

    <TextView
        android:id="@+id/tvLoginTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:text="吾爱化学"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/viewVerticalLine"
            android:layout_width="1px"
            android:layout_height="26dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@color/grayDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_favorite_border_black_20dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/favorites"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewVerticalLine"
            app:layout_constraintEnd_toStartOf="@+id/viewVerticalLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewVerticalLine" />

        <TextView
            android:id="@+id/tvCache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_cache_black_16dp"
            android:drawablePadding="8dp"
            android:gravity="center_horizontal"
            android:text="@string/cache"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewVerticalLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/viewVerticalLine"
            app:layout_constraintTop_toTopOf="@+id/viewVerticalLine" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewHorizontalLine"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="19dp"
        android:background="@color/grayDark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:overScrollMode="never">

        <LinearLayout
            android:id="@+id/llScrollViewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvWatchRecord"
                style="@style/Chemistry.MineTextView"
                android:text="@string/watch_record" />

            <View
                android:layout_width="fill_parent"
                android:layout_marginTop="35dp"
                android:layout_height="1dp"
                android:layout_marginLeft="135dp"
                android:layout_marginRight="135dp"
                android:background="@color/grayDark" />

            <TextView
                android:id="@+id/tvContribute"
                style="@style/Chemistry.MineTextView"
                android:text="@string/my_study" />

            <View
                android:layout_width="fill_parent"
                android:layout_marginTop="35dp"
                android:layout_height="1dp"
                android:layout_marginLeft="135dp"
                android:layout_marginRight="135dp"
                android:background="@color/grayDark" />

            <TextView
                android:id="@+id/tvNotificationToggle"
                style="@style/Chemistry.MineTextView"
                android:text="@string/notification_toggle" />

            <View
                android:layout_width="fill_parent"
                android:layout_marginTop="35dp"
                android:layout_height="1dp"
                android:layout_marginLeft="135dp"
                android:layout_marginRight="135dp"
                android:background="@color/grayDark" />

            <TextView
                android:id="@+id/tvFeedback"
                style="@style/Chemistry.MineTextView"
                android:text="@string/feedback" />

            <View
                android:layout_width="fill_parent"
                android:layout_marginTop="35dp"
                android:layout_height="1dp"
                android:layout_marginLeft="135dp"
                android:layout_marginRight="135dp"
                android:background="@color/grayDark" />

            <TextView
                android:id="@+id/tvSoftRelation"
                style="@style/Chemistry.MineTextView"
                android:layout_marginBottom="25dp"
                android:text="@string/soft_relation" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>