<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:txy="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    txy:contentPadding="8dp"
    txy:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lesson_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/image_recommend_experiment"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image_recommend_experiment"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025"
            app:srcCompat="@drawable/ic_launcher_background"
            />

        <TextView
            android:id="@+id/recommend_experiment"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/text_recommend_lesson"
            android:textSize="20sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.227"
            app:layout_constraintStart_toEndOf="@+id/image_recommend_experiment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.036" />

        <TextView
            android:id="@+id/text_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="10dp"
            android:text="@string/text_from"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_recommend_experiment"
            app:layout_constraintTop_toBottomOf="@+id/recommend_experiment"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/date_history_lesson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="33dp"
            android:layout_marginBottom="6dp"
            android:text="@string/string_favourite_lesson"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            app:layout_constraintStart_toEndOf="@+id/text_from"
            app:layout_constraintTop_toBottomOf="@+id/recommend_experiment"
            app:layout_constraintVertical_bias="0.703"
            txy:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
